--- a/Tasnadi_Botond_Proiect.csproj
+++ b/Tasnadi_Botond_Proiect.csproj
@@ -13,6 +13,11 @@
     <Compile Remove="Migrations\20220124203456_initial3.Designer.cs" />
     <Compile Remove="Migrations\20220124203815_initial4.cs" />
     <Compile Remove="Migrations\20220124203815_initial4.Designer.cs" />
+    <Compile Remove="Pages\Index.cshtml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="Pages\Index.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
